@@ -1,5 +1,13 @@
 2004-11-10	Benedikt Meurer <benny@xfce.org>
 
+	* terminal/terminal-preferences-dialog.c: Reworked the background
+	  image file selector a bit.
+	* terminal/terminal-window.c: Finally found a way to fix the long
+	  standing problem, where the Terminal window resizes upon Gtk+
+	  theme changes. This should fix bug #7.
+
+2004-11-10	Benedikt Meurer <benny@xfce.org>
+
 	* terminal/terminal-window.c: Added tooltip for the edit-toolbars
 	  action.
 
